accidently hid too much. fixed now

--- a/selfservice-IT.css
+++ b/selfservice-IT.css
@@ -6818,7 +6818,7 @@ header .logo h1 {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-header .logo > div{
+header .logo > div:first-of-type{
   display: none;
 }
 
